Bug 293850 - [regression] dolphin drag & drop cursor doesn't change to reflect move or link operations
Summary: [regression] dolphin drag & drop cursor doesn't change to reflect move or lin...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2012-02-11 17:40 UTC by S. Christian Collins
Modified: 2012-04-07 21:15 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description S. Christian Collins 2012-02-11 17:40:08 UTC
Version:           unspecified (using KDE 4.8.0) 
OS:                Linux

Starting with KDE 4.8, Dolphin no longer changes the mouse cursor when moving or linking a file using drag & drop between panes in split view in conjunction with the shift key (copy) or ctrl+shift (link).  The cursor when copying/moving/linking between two dolphin windows or between dolphin and another application works as expected.

Reproducible: Always

Steps to Reproduce:
1. Open Dolphin and split the file view into two panes.
2. Drag a file from one pane to the other, and while dragging, hold down the shift key--then hold down ctrl + shift.

Actual Results:  
The copy cursor (green plus) remains even when using the keyboard shortcut for moving or linking.

Expected Results:  
The cursor should change according to the type of file operation being performed.
Comment 1 Peter Penz 2012-02-11 18:51:47 UTC
Thanks for the report, this issue has been fixed for 4.8.1
Comment 2 S. Christian Collins 2012-03-07 15:01:09 UTC
This bug has been marked as fixed in 4.8.1, but I have upgraded to 4.8.1 and the bug still persists.  How can I re-open the bug?
Comment 3 Peter Penz 2012-03-07 15:08:59 UTC
I cannot reproduce the issue with 4.8.1 with the steps 1 + 2. Which Qt version are you using?
Comment 4 S. Christian Collins 2012-03-07 15:19:19 UTC
Hi Peter.  I am using Qt version 4.8.0.  When doing step 1 are you using the split view or two separate Dolphin windows?  When dragging a file between multiple Dolphin windows, the cursor changes correctly when using shift or ctrl+shift.  It's only when dragging between the left and right panes of the split view that the cursor doesn't update.
Comment 5 Peter Penz 2012-03-07 15:30:00 UTC
Ah, I could reproduce it now: The cursor does not work when pressing Ctrl/Shift/Ctrl+Shift _after_ dragging (I pressed the keys already _before_ dragging) -> reopening
Comment 6 S. Christian Collins 2012-04-06 19:31:45 UTC
This issue is still present in KDE 4.8.2.  The cursor is only updated when crossing over the divide between the two panes.  However, if you drag a file across to the other pane, then press the modifier keys while still holding the mouse button down, there is no visual feedback that the file operation has changed.
Comment 7 Peter Penz 2012-04-06 19:54:24 UTC
Yes I know (see comment 5) - I did not have the time yet to fix this issue... :-(
Comment 8 S. Christian Collins 2012-04-06 20:11:44 UTC
Peter, I want to thank you for your work on Dolphin.  I have never enjoyed using a file manager more than Dolphin.  It is truly a wonderful program.  The latest overhaul is faster and the animations make scrolling, etc. very easy for the eyes to track.  You just made every other file manager suck that much more ;)
Comment 9 Peter Penz 2012-04-06 20:32:34 UTC
Thanks for this nice feedback :-)
Comment 10 Peter Penz 2012-04-07 21:14:39 UTC
Git commit dafcc815b8f604b95e57986d3c3288b02f8d20d2 by Peter Penz.
Committed on 07/04/2012 at 23:11.
Pushed by ppenz into branch 'KDE/4.8'.

Fix drag & drop cursor issue

When dragging a file within the same Dolphin window and the Ctrl, Shift
or Alt-key is pressed the shape of the cursor was not changed to
indicate the copy/move/link-operation.
FIXED-IN: 4.8.3

M  +2    -0    dolphin/src/kitemviews/kitemlistcontroller.cpp

http://commits.kde.org/kde-baseapps/dafcc815b8f604b95e57986d3c3288b02f8d20d2
Comment 11 Peter Penz 2012-04-07 21:15:07 UTC
Git commit 2c5b44bf1fe0ad82de17ce29a63b756f13051707 by Peter Penz.
Committed on 07/04/2012 at 23:11.
Pushed by ppenz into branch 'master'.

Fix drag & drop cursor issue

When dragging a file within the same Dolphin window and the Ctrl, Shift
or Alt-key is pressed the shape of the cursor was not changed to
indicate the copy/move/link-operation.
FIXED-IN: 4.8.3

M  +2    -0    dolphin/src/kitemviews/kitemlistcontroller.cpp

http://commits.kde.org/kde-baseapps/2c5b44bf1fe0ad82de17ce29a63b756f13051707