Fix drag & drop cursor issue

When dragging a file within the same Dolphin window and the Ctrl, Shift
or Alt-key is pressed the shape of the cursor was not changed to
indicate the copy/move/link-operation.

BUG: 293850
FIXED-IN: 4.8.3